crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_151_KonamiVS_Goonies_The_VS_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-151-KonamiVS/Goonies, The (VS).zip
rom_sha256=99cf26d472fa58917526626f1575fec2839fbd9d7e4f0f4a5f276341bcb0b767
frames=1141
fb_bytes=245760
cycles=33949874
audio_samples=836507
audio_fnv1a64=a5c8c5363862b604
checkpoint f900 fb_fnv1a64=92abcf9cbf4cbb45
checkpoint f1100 fb_fnv1a64=659a577e0345c555
