crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_151_KonamiVS_Silent_Assault_Sachen_Joy_Van_t1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-151-KonamiVS/Silent Assault (Sachen-Joy Van) [t1].zip
rom_sha256=700dd39b50cb784f4f45b46e6f2af06e8b584dcf4141a289a2de84d9a72b9e48
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=7125e8853b2e2347
checkpoint f900 fb_fnv1a64=cbfd57cda9eb3f0e
checkpoint f1100 fb_fnv1a64=f24fec4ef3251037
