crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_151_KonamiVS_VS_TKO_Boxing_VS.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-151-KonamiVS/VS. TKO Boxing (VS) [!].zip
rom_sha256=ee35fb016a5f75c8a3e7c27c62bc9dfb5dc5e9bd0bffe199812f1876f1a62044
frames=1141
fb_bytes=245760
cycles=15685
audio_samples=369
audio_fnv1a64=3645268d4a836982
checkpoint f900 fb_fnv1a64=8b797ba4881e3b25
checkpoint f1100 fb_fnv1a64=8b797ba4881e3b25
