crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_153_BandaiLZ93D50_Famicom_Jump_II_Saikyou_no_7_Nin_Japan.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-153-BandaiLZ93D50/Famicom Jump II - Saikyou no 7 Nin (Japan).nes
rom_sha256=e8914e73c2c2e6ddc2bd4021eaf215e446fba70e5561021cb83250adcfa949fe
frames=1141
fb_bytes=245760
cycles=33949960
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
